k8s/eventforwarder_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-forwarder-deployment
  namespace: developerautomation-xavgy
  labels:
    project: developerautomation
    department: cloudengineering
    component: azure-devops-janitor
    app: event-forwarder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-forwarder
  template:
    metadata:
      labels:
        project: developerautomation
        department: cloudengineering
        app: event-forwarder
    spec:
      priorityClassName: selfservice
      containers:
      - name: event-forwarder
        image: 642375522597.dkr.ecr.eu-west-1.amazonaws.com/dfds.developerautomation-xavgy.event-forwarder:event-forwarder-$(Build.BuildId)
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
