k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-forwarder-service
  namespace: developerautomation-xavgy
  labels:
    app: event-forwarder
    project: developerautomation
    department: cloudengineering
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
  - name: metrics
    port: 8080
    targetPort: 8080
  selector:
    app: event-forwarder
